--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -6,6 +6,16 @@
   address={Heidelberg}
 }
 
+@article{hairer2008conjugate,
+  title={Conjugate-symplecticity of linear multistep methods},
+  author={Hairer, Ernst},
+  journal={Journal of Computational Mathematics},
+  pages={657--659},
+  year={2008},
+  publisher={JSTOR}
+}
+
+
 @techreport{baker2019workshop,
   title={Workshop report on basic research needs for scientific machine learning: Core technologies for artificial intelligence},
   author={Baker, Nathan and Alexander, Frank and Bremer, Timo and Hagberg, Aric and Kevrekidis, Yannis and Najm, Habib and Parashar, Manish and Patra, Abani and Sethian, James and Wild, Stefan and others},
@@ -176,6 +186,32 @@ year = {2023}
   author={Tyranowski, Tomasz M and Kraus, Michael},
   journal={Contributions to Plasma Physics},
   year={2022}
+}
+
+@article{yildiz2024structure,
+  title={Structure-preserving learning for multi-symplectic PDEs},
+  author={Y{\i}ld{\i}z, S{\"u}leyman and Goyal, Pawan and Benner, Peter},
+  journal={arXiv preprint arXiv:2409.10432},
+  year={2024}
+}
+
+@article{bridges2001multi,
+  title={Multi-symplectic integrators: numerical schemes for Hamiltonian PDEs that conserve symplecticity},
+  author={Bridges, Thomas J and Reich, Sebastian},
+  journal={Physics Letters A},
+  volume={284},
+  number={4-5},
+  pages={184--193},
+  year={2001},
+  publisher={Elsevier}
+}
+
+
+@article{brantner2023symplectic,
+  title={Symplectic autoencoders for model reduction of hamiltonian systems},
+  author={Brantner, Benedikt and Kraus, Michael},
+  journal={arXiv preprint arXiv:2312.10004},
+  year={2023}
 }
 
 @article{graves2012long,
