--- a/paper/src/assets/custom.sty
+++ b/paper/src/assets/custom.sty
@@ -1,3 +1,13 @@
 \usepackage{cleveref}
 % needed for really wide hat
 \usepackage{yhmath}
+
+% all definitions needed for offline-online tikz
+\usepackage{standalone, tikz}
+\definecolor{morange}{RGB}{255,127,14}
+\definecolor{mblue}{RGB}{31,119,180}
+\definecolor{mred}{RGB}{214,39,40}
+\definecolor{mpurple}{RGB}{148,103,189}
+\definecolor{mgreen}{RGB}{44,160,44}
+\newcommand{\pro}{\ensuremath{\mathcal{P}}}
+\newcommand{\rec}{\ensuremath{\mathcal{R}}}
