--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -376,3 +376,11 @@ year = {2023}
   address={Heidelberg},
   publisher={Springer}
 }
+
+@book{cellier2006continuous,
+  title={Continuous system simulation},
+  author={Cellier, Fran{\c{c}}ois E and Kofman, Ernesto},
+  year={2006},
+  publisher={Springer Science \& Business Media},
+  address={Heidelberg}
+}
