--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -384,3 +384,10 @@ year = {2023}
   publisher={Springer Science \& Business Media},
   address={Heidelberg}
 }
+
+@article{guo2022transformer,
+  title={Transformer meets boundary value inverse problems},
+  author={Guo, Ruchi and Cao, Shuhao and Chen, Long},
+  journal={arXiv preprint arXiv:2209.14977},
+  year={2022}
+}
