--- a/paper/src/tikz/vp_transformer.tex
+++ b/paper/src/tikz/vp_transformer.tex
@@ -22,7 +22,7 @@
                                          } % <---
                       },
     addmodule2/.style={module, fill=mpurple!40},
-    crossout/.style = {draw, inner sep=0pt, cross out, fit=#1},
+    crossout/.style = {draw, inner sep=0pt, cross out, fit=####1},
     arrow/.style={-stealth, thick, rounded corners},
 ]
 \node (input) {Input};
