Fixed typos that 小仙女 helped me find.

--- a/paper/src/assets/resume.tex
+++ b/paper/src/assets/resume.tex
@@ -1,4 +1,4 @@
-Deux des nombreuses tendances de la recherche sur les réseaux de neurones de ces dernières années ont été (i) l'apprentissage des systèmes dynamiques, en particulier avec les réseaux de neurones récurrents tels que les `Long Short Term Memory' (LSTM) et (ii) l'introduction de réseaux de neurones de type `transformers' pour le traitement du langage naturel (NLP). Ces deux tendances ont suscité un énorme engouement, en particulier la seconde : les réseaux transformers dominent désormais le NLP.
+Deux des nombreuses tendances de la recherche sur les réseaux de neurones de ces dernières années ont été (i) l'apprentissage des systèmes dynamiques, en particulier avec les réseaux de neurones récurrents tels que les `Long Short Term Memory' (LSTM) et (ii) l'introduction de réseaux de neurones de type `transformers' pour le traitement du langage naturel (NLP). % Ces deux tendances ont suscité un énorme engouement, en particulier la seconde : les réseaux transformers dominent désormais le NLP.
 
 Bien que certains travaux aient été réalisés à l'intersection de ces deux tendances, ils se sont largement limités à l'utilisation directe du transformer vanilla sans adapter son architecture à la configuration d'un système physique.
 
