Second iteration of reviews.

--- a/paper/src/assets/documenter.sty
+++ b/paper/src/assets/documenter.sty
@@ -79,3 +79,6 @@
 \definecolor{mgreen}{RGB}{44,160,44}
 \newcommand{\pro}{\ensuremath{\mathcal{P}}}
 \newcommand{\rec}{\ensuremath{\mathcal{R}}}
+
+% for linebreaks with \texttt
+\usepackage[htt]{hyphenat}
